<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip" >
    
    <TextView android:text="@string/setVibrateChange"
    		  android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
				android:textSize="20dip" />
    <RadioGroup android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">

		<RadioButton android:id="@+id/ringer_vibrate_when_possible"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/vibrate_when_possible" />

		<RadioButton android:id="@+id/ringer_vibrate_when_silent"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/vibrate_when_silent" />


		<RadioButton android:id="@+id/ringer_vibrate_never"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/vibrate_off" />

	</RadioGroup>
    <Button android:id="@+id/ok_button"
    		 android:layout_width="100dip"
    		 android:layout_height="wrap_content"
    		 android:text="OK"
    		 android:layout_marginTop="10dip" />
    
</LinearLayout>