<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/ScheduleType"
        android:text="@string/SystemVolumeSchedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="12.0sp"
        android:textColor="#ff000000"
        android:background="#ff888888" />
        
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="5dip">

            <LinearLayout
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal">
                
                <ToggleButton
                  android:id="@+id/day0toggle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textOn="@string/day0"
                  android:textOff="@string/day0" />
                
                <ToggleButton
                  android:id="@+id/day1toggle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textOn="@string/day1"
                  android:textOff="@string/day1" />
                
                <ToggleButton
                  android:id="@+id/day2toggle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textOn="@string/day2"
                  android:textOff="@string/day2" />
            
            </LinearLayout>

            <LinearLayout
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal">
                    
                <ToggleButton
                  android:id="@+id/day3toggle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textOn="@string/day3"
                  android:textOff="@string/day3" />
                
                <ToggleButton
                  android:id="@+id/day4toggle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textOn="@string/day4"
                  android:textOff="@string/day4" />
                
                <ToggleButton
                  android:id="@+id/day5toggle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textOn="@string/day5"
                  android:textOff="@string/day5" />
                
                <ToggleButton
                  android:id="@+id/day6toggle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textOn="@string/day6"
                  android:textOff="@string/day6" />
            
            </LinearLayout>
            
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">
                
                <TableRow>
                
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/startTimeLabel" 
                        android:gravity="center_vertical" />
                    <TimePicker 
                        android:id="@+id/startTime" />
                
                </TableRow>
                
                <TableRow>
                
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/endTimeLabel" 
                        android:gravity="center_vertical" />
                    <TimePicker 
                        android:id="@+id/endTime" />
                
                </TableRow>
                
            </TableLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/volumeLabel" />
                <SeekBar
                    android:id="@+id/volume"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:paddingLeft="5dip" />
        
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dip"
                    android:text="@string/vibrateLabel" />
                <CheckBox 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vibrateCheckbox" />
                
            </LinearLayout>
        
        </LinearLayout>
    
    </ScrollView>
    
</LinearLayout>